<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/color2"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLocation"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input_border_bottom"
            android:cursorVisible="true"
            android:gravity="center|left|bottom"
            android:hint="@string/bank_detail_iban"
            android:inputType="text"
            android:maxLength="50"
            android:paddingBottom="10dp"
            android:textColor="@color/black_effective"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.future.it.taxi.client.ui.texts.ATextView
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:text="@string/bank_detail_legal_title"
        android:textSize="20sp"
        android:background="@color/light_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">
        <com.future.it.taxi.client.ui.texts.ATextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bank_detail_terms_condition_title"
            android:layout_margin="@dimen/_5sdp"
            android:textSize="16sp"
            android:textColor="@color/md_blue_600"/>
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
    <com.future.it.taxi.client.ui.texts.ATextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bank_detail_terms_condition"
        android:layout_margin="@dimen/_10sdp"
        android:textColor="@color/color2"
        android:textSize="12sp"/>


    <com.future.it.taxi.client.ui.texts.ATextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bank_detail_terms_title"
        android:textColor="@color/md_blue_800"
        android:padding="@dimen/_3sdp"
        android:textSize="18sp"
        android:gravity="center"/>

    <com.future.it.taxi.client.ui.texts.ATextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bank_detail_privacy_policy_title"
        android:textColor="@color/md_blue_800"
        android:padding="@dimen/_3sdp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"/>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:background="@drawable/bg_button"
        android:layout_margin="@dimen/_10sdp"/>
</LinearLayout>