<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <com.future.it.taxi.client.ui.texts.ATextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:text="@string/menu_setting_general_title"
        android:textSize="20sp"
        android:background="@color/light_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.future.it.taxi.client.ui.texts.ATextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_setting_general_radius_title"
                android:padding="@dimen/_5sdp"
                android:textSize="15sp"/>

            <com.future.it.taxi.client.ui.texts.ATextView
                android:id="@+id/txtRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20Km"
                android:padding="@dimen/_5sdp"
                android:textSize="15sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_5sdp"/>
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sbRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            />
    </LinearLayout>


    <com.future.it.taxi.client.ui.texts.ATextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:text="@string/menu_setting_view_title"
        android:textSize="20sp"
        android:background="@color/light_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_3sdp">
            <com.future.it.taxi.client.ui.texts.ATextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_setting_view_taxi_radar_title"
                android:padding="@dimen/_5sdp"
                android:textSize="15sp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swRadar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:textSize="15sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_5sdp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_3sdp">
            <com.future.it.taxi.client.ui.texts.ATextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_setting_view_traffic_title"
                android:padding="@dimen/_5sdp"
                android:textSize="15sp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swTraffic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:textSize="15sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_5sdp"/>
        </RelativeLayout>

    </LinearLayout>

    <com.future.it.taxi.client.ui.texts.ATextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:text="@string/menu_setting_navigation_title"
        android:textSize="20sp"
        android:background="@color/light_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_3sdp">
            <com.future.it.taxi.client.ui.texts.ATextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_setting_navigation_auto_start_title"
                android:padding="@dimen/_5sdp"
                android:textSize="15sp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swAutoStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:textSize="15sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_5sdp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_3sdp">
            <com.future.it.taxi.client.ui.texts.ATextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_setting_navigation_alert_title"
                android:padding="@dimen/_5sdp"
                android:textSize="15sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true">
                <com.future.it.taxi.client.ui.texts.ATextView
                    android:id="@+id/txtShowAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/menu_setting_navigation_alert_show_all_title"/>
                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_detail"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <com.future.it.taxi.client.ui.texts.ATextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:text="@string/menu_setting_notification_title"
        android:textSize="20sp"
        android:background="@color/light_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_3sdp">
            <com.future.it.taxi.client.ui.texts.ATextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_setting_navigation_alert_title"
                android:padding="@dimen/_5sdp"
                android:textSize="15sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true">
                <com.future.it.taxi.client.ui.texts.ATextView
                    android:id="@+id/txtNotificationSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/menu_setting_notification_instant_title"/>
                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_detail"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>