<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSelf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="@dimen/_5sdp"
        android:visibility="visible"
        card_view:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_3sdp"
        >
        <com.future.it.taxi.client.ui.texts.ATextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_as_self_title"
            android:textSize="18sp"
            android:gravity="start"
            android:textStyle="bold"
            android:textColor="@color/black_effective"
            android:padding="@dimen/_3sdp"/>
        <com.future.it.taxi.client.ui.texts.ATextView
            android:id="@+id/txtSelf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_as_self_sub_title"
            android:textSize="14sp"
            android:gravity="start"
            android:textColor="@color/darkGray"
            android:padding="@dimen/_3sdp"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_below="@id/cardSelf"
        android:id="@+id/cardEmployee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="@dimen/_5sdp"
        android:visibility="visible"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_3sdp"
            >
            <com.future.it.taxi.client.ui.texts.ATextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_as_employee_title"
                android:textSize="18sp"
                android:gravity="start"
                android:textStyle="bold"
                android:textColor="@color/black_effective"
                android:padding="@dimen/_3sdp"/>
            <com.future.it.taxi.client.ui.texts.ATextView
                android:id="@+id/txtEmployee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_as_employee_sub_title"
                android:textSize="14sp"
                android:gravity="start"
                android:textColor="@color/darkGray"
                android:padding="@dimen/_3sdp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_below="@id/cardEmployee"
        android:id="@+id/cardCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="@dimen/_5sdp"
        android:visibility="visible"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_3sdp"
            >
            <com.future.it.taxi.client.ui.texts.ATextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_as_company_title"
                android:textSize="18sp"
                android:gravity="start"
                android:textStyle="bold"
                android:textColor="@color/black_effective"
                android:padding="@dimen/_3sdp"/>
            <com.future.it.taxi.client.ui.texts.ATextView
                android:id="@+id/txtcompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_as_company_sub_title"
                android:textSize="14sp"
                android:gravity="start"
                android:textColor="@color/darkGray"
                android:padding="@dimen/_3sdp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>