<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_120sdp"
            android:layout_weight="2"
            android:src="@mipmap/ic_launcher_round"
            android:layout_gravity="center"
            android:padding="@dimen/_5sdp"
            android:layout_margin="@dimen/_10sdp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10sdp">
            <com.future.it.taxi.client.ui.texts.ATextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_title_select_photo"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="16sp"
                android:textColor="@color/black_effective"/>
            <com.future.it.taxi.client.ui.texts.ATextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/personal_select_photo"
                android:gravity="center"
                android:background="@drawable/bg_button"
                android:padding="@dimen/_3sdp"/>

        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/color2"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextType"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input_border_bottom"
            android:cursorVisible="true"
            android:gravity="center|left|bottom"
            android:hint="@string/personal_dob"
            android:inputType="text"
            android:maxLength="50"
            android:paddingBottom="10dp"
            android:textColor="@color/black_effective"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/color2"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_marginTop="@dimen/_5sdp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUserName"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input_border_bottom"
            android:cursorVisible="true"
            android:gravity="center|left|bottom"
            android:hint="@string/personal_username"
            android:text="+32352565"
            android:inputType="text"
            android:maxLength="50"
            android:paddingBottom="10dp"
            android:textColor="@color/black_effective"
            android:textSize="18sp"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.future.it.taxi.client.ui.texts.ATextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_change_password"
        android:gravity="center"
        android:background="@drawable/bg_button"
        android:textSize="18sp"
        android:textColor="@color/md_blue_600"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NEXT"
        android:background="@drawable/bg_button"
        android:layout_margin="@dimen/_10sdp"/>
</LinearLayout>